<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeLoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:src="@drawable/ic_frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/meditate"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="323dp"
        android:layout_height="@dimen/height_button"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/textView_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/bold"
        app:cornerRadius="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:fontFamily="@font/regular"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:fontFamily="@font/semi_bold"
            android:textSize="14sp"
            android:textColor="@color/main_background"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>