<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:layout_marginTop="130dp" />

    <TextView
        android:id="@+id/textView_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/input_email"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/bold"
        android:layout_marginTop="150dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_edt_email"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textView_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:textColorHint="@color/gray_3">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/email"
            android:textSize="15sp"
            android:fontFamily="@font/regular"
            android:cursorVisible="false"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ly_edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="323dp"
            android:layout_height="@dimen/height_button"
            android:fontFamily="@font/bold"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            app:iconGravity="textStart" />

        <ProgressBar
            android:id="@+id/progress_continue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white"
            android:translationZ="4dp"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>