<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountInfoFragment">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="33dp"/>

    <ImageView
        android:id="@+id/img_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_setting_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_avatar"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:id="@id/ly_progress"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:visibility="invisible">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/black"
            android:alpha="0.2"/>

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminateTint="@color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/circle_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="100dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ly_today_time_meditate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp">

                <ImageView
                    android:id="@+id/img_today_time_meditate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_timer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/semi_bold"
                    android:text="@string/today_time_meditate"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_data_today_time_meditate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ly_today_time_meditate"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_today_time_meditate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"
                    android:text="phút"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_total_time_meditate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ly_data_today_time_meditate"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/img_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_timer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/semi_bold"
                    android:text="@string/total_time_meditate"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_data_total_time_meditate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ly_total_time_meditate"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_total_time_meditate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"
                    android:text="phút"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_session_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ly_data_total_time_meditate"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/img_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_headphones" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/semi_bold"
                    android:text="@string/sessions_complete"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_data_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ly_session_completed"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"
                    android:text="sessions"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>